# metroid

./: .gitignore  CMakeLists.txt
Classes/: AnimCtl.cpp  AnimCtl.h  AppDelegate.cpp  CheckHitObj.cpp  CheckKeyData.cpp  CheckKeyData.h  CheckList.cpp  CheckList.h  EffectCtl.cpp  EffectCtl.h  EffectMng.cpp  EffectMng.h  GameScene.cpp  GameScene.h  HelloWorldScene.cpp  HelloWorldScene.h  MojuleHeader.h  MoveCtl.cpp  MoveCtl.h  SoundCtl.cpp  SoundCtl.h
Classes/Effekseer/: Effekseer.cpp
Classes/debug/: _DebugConOut.cpp  _DebugConOut.h  _DebugGraph.cpp  _DebugGraph.h
Classes/input/: OPRT.cpp  OPRT.h  OPRT_KEY.cpp  OPRT_KEY.h  OPRT_TOUCH.cpp  OPRT_TOUCH.h
Classes/mojule/check/: CheckHitObj.cpp  CheckHitObj.h  CheckKeyData.cpp  CheckKeyData.h  CheckList.cpp  CheckList.h
Classes/mojule/move/: MovFall.cpp  MovFall.h  MovIdle.cpp  MovIdle.h  MovJump.cpp  MovJump.h  MovLR.cpp  MovLR.h
Classes/move/: MovIdle.cpp  MovJump.cpp  MovLR.cpp  MovLR.h  MoveCtl.cpp  MoveCtl.h
Classes/unit/: Enemy.cpp  Enemy.h  Obj.cpp  Obj.h  player.cpp  player.h
Resources/image/Sprites/Fx/enemy-death/: enemy-death.plist
Resources/image/Sprites/Fx/impact/: impact.plist
Resources/image/Sprites/Fx/power-up/: power-up.plist
Resources/image/Sprites/Fx/shot/: shot.plist
Resources/image/Sprites/enemies/crab-idle/: crab-idle.plist
Resources/image/Sprites/enemies/crab-walk/: crab-walk.plist
Resources/image/Sprites/enemies/jumper-idle/: jumper-idle.plist
Resources/image/Sprites/enemies/jumper-jump/: jumper-jump.plist
Resources/image/Sprites/enemies/octopus/: octopus.plist
Resources/image/Sprites/player/player-cling/: player-cling.plist
Resources/image/Sprites/player/player-duck/: player-duck.plist
Resources/image/Sprites/player/player-hurt/: player-hurt.plist
Resources/image/Sprites/player/player-idle/: player-idle.plist
Resources/image/Sprites/player/player-jump/: player-jump.plist
Resources/image/Sprites/player/player-run/: player-run.plist
Resources/image/Sprites/player/player-run-shot/: player-run-shot.plist
Resources/image/Sprites/player/player-shoot-up/: player-shoot-up.plist
Resources/image/Sprites/player/player-stand/: player-stand.plist
Resources/mapdata/: backGround.tsx  mapdata-1.tmx  tilesets.tsx
Resources/sound/se/: maougan.ckb
cricket/1.6.7/src/samples/hellocricket/linux/: hellocricket.cpp
cricket/1.6.7/src/samples/hellocricket/win/: hellocricket.cpp  hellocricket_vs2013.sln  hellocricket_vs2013.vcxproj  hellocricket_vs2015.sln  hellocricket_vs2015.vcxproj  hellocricket_vs2017.sln  hellocricket_vs2017.vcxproj
proj.win32/: CheckHitObj.h  cocos2dx.sln  cocos2dx.vcxproj  cocos2dx.vcxproj.filters  main.cpp
textfolder/: 11.11.txt  11.14.txt  6.10.txt  6.11.txt  6.12.txt  6.13.txt  6.17.txt  6.18.txt  6.19.txt  6.20みんな大好きconst講座.txt  6.21.txt  6.24.txt  6.25.txt  6.27.txt  6.28.txt  6.5.txt  6.6.txt  6.7.txt  7.1.txt  7.10.txt  7.11.txt  7.16.txt  7.17.txt  7.2.txt  7.22.txt  7.3.txt  7.4.txt  7.8.txt  7.9.txt  cocosについて.txt  変更リスト.txt  調べておきたいものbycocos2dx.txt
